add overflow: ellipsis to key fields; refactor .humon-editor class to use variables

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -103,3 +103,6 @@ $nodeActiveCopyColor: $grayDarkest1;
 
 $nodeIdxCopyColor: lighten($nodeCopyColor, 15%);
 $nodeIdxActiveCopyColor: lighten($nodeActiveCopyColor, 15%);
+
+$nodeEditorBorder: 1px solid $grayLighter;
+$nodeEditorPadding: 15px;
