add and use source-sans-pro-rails gem

--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -12,11 +12,11 @@ span.blocky {
   border: none;
 }
 body {
-  font-family: "Source Sans";
+  font-family: "SourceSansPro";
 }
 
 .node {
-  font-family: "Source Sans";
+  font-family: "SourceSansPro";
   font-size: $nodeCopyFontSize;
   cursor: text;
   color: $copygray;
