more contrast on active styling: darker; added guillette, replace carriage returns won children with bullets

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,8 +1,9 @@
-$copygray: #555555;
+$copygray: #666666;
 $grayDark: darken($copygray, 15%);
 $grayDarker: darken($copygray, 30%);
 $grayDarkest: darken($copygray, 40%);
 $grayDarkest1: darken($copygray, 50%);
+$grayDarkest2: darken($copygray, 60%);
 $grayLight: lighten($copygray, 15%);
 $grayLighter: lighten($copygray, 28%);
 $grayLightest: lighten($copygray, 35%);
