--- a/app/assets/javascripts/templates/humon_node_literal.hbs
+++ b/app/assets/javascripts/templates/humon_node_literal.hbs
@@ -1,14 +1,12 @@
 {{!
 humon_node_literal.hbs
 }}
-<span class="blocky">
   {{partial humon_key_index_field}}
 
   {{view "Sysys.ValEditableField" rawValueBinding="view.templateStrings.asString" }}
-  <span class="node-detail">
-  </span>
+
+  <span class="node-detail"></span>
+
   <span class="node-detail node-icon">
     {{partial humon_icon}}
   </span>
-</span>
-<span class="close-glyph"></span>
