--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -7,10 +7,6 @@
 }
 
 
-span.blocky {
-  display: inline-block;
-  border: none;
-}
 body {
   font-family: "SourceSansPro";
 }
@@ -45,20 +41,25 @@ body {
   content: "\00BB"; //»
   position: absolute;
   left: 0;
-  font-size: 24px;
+  font-size: 22px;
+  font-weight: 600;
   vertical-align: middle;
+}
+.node:before {
+  font-weight: 100;
+  transition: all 300ms ease;
 }
 
 .node.active > .node {
   border-left: $nodeActiveBorderLeft;
   transition: all 300ms ease;
 }
-.node.active > span.blocky > .content-field {
+.node.active > .content-field {
   border-bottom: $borderUnderline;
   color: $nodeActiveCopyColor;
 }
 
-.node.active > span.blocky > .content-field.idx-field {
+.node.active > .content-field.idx-field {
   transition-property: color;
   color: $nodeIdxActiveCopyColor;
   border-bottom: $borderTransparent;
@@ -67,11 +68,11 @@ body {
   content: "\2026"; // ellipsis
   content: "\0020"; // interpunct
 }
-.node.active > span.blocky> .content-field:empty:before {
+.node.active > .content-field:empty:before {
   display: none;
 }
-.node.active > span.blocky> span.node-detail,
-.node:hover > span.blocky > span.node-detail {
+.node.active > span.node-detail,
+.node:hover > span.node-detail {
   visibility: visible;
 }
 span.node-detail {
@@ -96,7 +97,6 @@ span.node-detail.node-icon {
  * Active child styling
  */
 // child node glyph
-// .node.activeChild > span.blocky > .content-field.label-field {
 .node.activeChild {
   &:before {
     content: "\21B5"; // carraige return
@@ -224,55 +224,6 @@ span.node-detail.node-icon {
   }
 }
 
-/*********************
- * Glyphs
- ********************/
-span.colon-glyph {
-  position: relative;
-  left: 0px;
-  font-weight: bolder;
-  padding-left: 2px;
-  margin-right: 4px;
-}
-/*
- * open glyph
- */
-span.open-glyph:before {
-  font-size: $glyphsize;
-  color: $glyphcolor;
-  position: absolute;
-}
-.node.active.node-hash > span.blocky > span.open-glyph:before{
-  content: '{';
-}
-.node.active.node-list > span.blocky > span.open-glyph:before{
-  content: '[';
-}
-/*
- * close glyph
- */
-span.close-glyph {
-  z-index: 1001;
-}
-
-span.close-glyph:after {
-  font-size: $glyphsize;
-  color: $glyphcolor;
-  position: absolute;
-  padding-left: 15px;
-  bottom: -6px;
-  z-index: 1001;
-}
-.node.active > span.close-glyph:after {
-  border-left: $nodeLeftBorder $activeColorLight solid;
-  border-left: $nodeLeftBorder $activeColorLight solid;
-}
-.node.active.node-hash > span.close-glyph:after{
-  content: '}';
-}
-.node.active.node-list > span.close-glyph:after{
-  content: ']';
-}
 
 // see hnv.suppressGap
 .node.node-collection.suppress-gap {
