--- a/app/views/data_points/_form.html.erb
+++ b/app/views/data_points/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@data_point) do |f| %>
+<%= form_for(@data_point, hhtml: {id: "data-point-form"}) do |f| %>
   <% if @data_point.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@data_point.errors.count, "error") %> prohibited this data_point from being saved:</h2>
@@ -18,4 +18,4 @@
   <div class="actions">
     <%= f.submit %>
   </div>
-<% end %>
+<% end %>dG
