updating ember-data

--- a/app/assets/javascripts/templates/data_point.hbs
+++ b/app/assets/javascripts/templates/data_point.hbs
@@ -1,5 +1,5 @@
 <h1> DataPoint </h1>
-{{humon-editor json=this.asJson}}
+{{humon-editor json=this.asJson jsonChanged="jsonChanged"}}
 <button {{action "submit" target="view"}}>
   Create data point
 </button>
