--- a/app/assets/javascripts/templates/data_point.hbs
+++ b/app/assets/javascripts/templates/data_point.hbs
@@ -1,5 +1,8 @@
 <h1> DataPoint </h1>
-{{humon-editor json=this.asJson jsonChanged="jsonChanged"}}
+THIS DOT details:: {{this.details}}<br>
+details:: {{this.details}}<br>
+THIS:: {{this}}
+{{humon-editor initialJson=initialJson json=details}}
 <button {{action "submit" target="view"}}>
   Create data point
 </button>
