add rootKey to HEC; refactor HEC#initJson

--- a/app/assets/javascripts/templates/data_point.hbs
+++ b/app/assets/javascripts/templates/data_point.hbs
@@ -1,4 +1,5 @@
 <h1> DataPoint </h1>
+{{humon-editor initialJson="now" jsonOut=submitted_at rootKey="Time"}}
 {{humon-editor initialJson=initialJson json=details}}
 <button {{action "submit"}}>
   Create data point
