update key-fixed-field styling

--- a/app/assets/javascripts/templates/data_point.hbs
+++ b/app/assets/javascripts/templates/data_point.hbs
@@ -1,6 +1,6 @@
 <h1> DataPoint </h1>
 {{humon-editor initialJson="now" jsonOut=submitted_at rootKey="Time"}}
-{{humon-editor initialJson=initialJson json=details}}
+{{humon-editor initialJson=initialJson json=details rootKey="Details"}}
 <button {{action "submit"}}>
   Create data point
 </button>
