--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -66,4 +66,6 @@ $nodeIdxCopyColor: lighten($nodeCopyColor, 15%);
 $nodeIdxActiveCopyColor: lighten($nodeActiveCopyColor, 15%);
 
 $nodeEditorBorder: 1px solid $grayLighter;
-$nodeEditorPadding: 15px;
+$nodeEditorPadding: 15px 3px;
+
+$rootNodeKeyColor: darken($nodeCopyColor, 15%)
