--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -5,6 +5,10 @@
   padding: $nodeEditorPadding;
   border: $nodeEditorBorder;
 }
+.humon-editor.humon-editor-inline {
+  padding: 5px 3px;
+  border: none;
+}
 
 
 body {
@@ -221,6 +225,18 @@ span.node-detail.node-icon {
     overflow: visible;
     max-width: 1000px;
     transition: all 300ms ease;
+  }
+  /*
+   * Key Fixed Field
+   */
+  span.content-field.key-field.key-field-fixed {
+    color: $rootNodeKeyColor;
+    border-bottom: $borderTransparent;
+    font-weight: bold;
+  }
+  .node.active > span.content-field.key-field.key-field-fixed {
+    color: $rootNodeKeyColor;
+    border-bottom: $borderTransparent;
   }
 }
 
