--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -7,9 +7,11 @@
 </ul>
 </div>
 </div>
+ZUGGGGGGG
 <hr> Humon Editor Component
-{{humon-editor initialJson=view.json jsonChanged="jsonChanged"}}
+{{humon-editor initialJson=view.json jsonChanged="jsonChanged" downPressed="downPressed" upPressed="upPressed"}}
 <hr>
+  BUGGGGGGGGGG
   Test View:
 {{view Sysys.TestView}}
 </hr>
