add upPressed, downPresed correct handlers. mostly works but there's a bug

--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -12,7 +12,8 @@ ZUGGGGGGG
 <hr>
 <hr>
 <hr> Humon Editor Component
-{{humon-editor initialJson=view.json jsonChanged="jsonChanged" downPressed="downPressed" upPressed="upPressed"}}
+{{humon-editor initialJson=view.json rootKey="deets" jsonChanged="jsonChanged" downPressed="downPressed" upPressed="upPressed"}}
+{{humon-editor initialJson=view.json2 rootKey="deets" jsonChanged="jsonChanged" downPressed="downPressed" upPressed="upPressed"}}
 <hr>
 <hr>
 <hr>
