--- a/app/assets/javascripts/templates/data_point.hbs
+++ b/app/assets/javascripts/templates/data_point.hbs
@@ -1,6 +1,6 @@
 <h1> DataPoint </h1>
-{{humon-editor initialJson=submittedAt rootKey="Time" downPressed="downPressed" upPressed="upPressed"}}
-{{humon-editor initialJson=details rootKey="Details" downPressed="downPressed" upPressed="upPressed"}}
+{{humon-editor json=submittedAt rootKey="Time" downPressed="downPressed" upPressed="upPressed"}}
+{{humon-editor json=details rootKey="Details" downPressed="downPressed" upPressed="upPressed"}}
 <button {{action "submitDataPoint"}}>
   Create data point
 </button>
