--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -9,17 +9,5 @@
 </div>
 
 
-<hr>
-<hr>
-<hr>
-<hr> Humon Editor Component
-{{humon-editor initialJson=view.json rootKey="deets" jsonChanged="jsonChanged" downPressed="downPressed" upPressed="upPressed"}}
-{{humon-editor initialJson=view.json2 rootKey="deets" jsonChanged="jsonChanged" downPressed="downPressed" upPressed="upPressed"}}
-<hr>
-<hr>
-<hr>
-<hr>
-  Test View:
-{{view Sysys.TestView}}
-</hr>
-  {{outlet}}
+{{!view Sysys.TestView}}
+{{outlet}}
