--- a/app/assets/javascripts/templates/test.hbs
+++ b/app/assets/javascripts/templates/test.hbs
@@ -2,6 +2,7 @@ TEST
 HEV:::
 {{view Sysys.HumonEditorView jsonBinding=view.json}}
 <hr>
-HNV:::
-{{! view Sysys.HumonNodeView nodeContent=view.node}}
-/TEST
+<hr> Humon Editor Component
+{{humon-editor initialJson=view.json rootKey="deets" jsonChanged="jsonChanged" downPressed="downPressed" upPressed="upPressed"}}
+{{humon-editor initialJson=view.json2 rootKey="deets" jsonChanged="jsonChanged" downPressed="downPressed" upPressed="upPressed"}}
+<hr>
