--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,7 @@
 
 @import "base";
 @import "humon_node";
+@import "data_point";
 //
 // @import "vendor/jquery-ui-1.9.2.custom";
 //# pp/assets/javascripts/vendor/jquery-ui-1.9.2.custom/css/ui-lightness
