--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -24,7 +24,7 @@ body {
   padding-left: $nodeWhiteIndent;
   border: 0px transparent solid;
   border-left: $nodeBorderLeft;
-  background: white;
+  // background: white;
   transition: all 300ms ease;
 }
 
