--- a/app/assets/stylesheets/data_point.css.scss
+++ b/app/assets/stylesheets/data_point.css.scss
@@ -9,12 +9,19 @@ $dataPointWidth: 500px;
   margin: 3px;
 
   span.options {
+    position: relative;
     display: none;
     float: right;
     right: 5px;
     top: 5px;
   }
   &:hover span.options {
+    position: relative;
+    display: block;
+    z-index: 100;
+  }
+  &:focus span.options {
+    position: relative;
     display: block;
     z-index: 100;
   }
