--- a/app/assets/javascripts/templates/data_point.hbs
+++ b/app/assets/javascripts/templates/data_point.hbs
@@ -1,7 +1,7 @@
 <span class="options">
   {{#link-to "dataPoint" this}} Perma link {{/link-to}}
   {{#if isDirty}}
-  <a {{action "save"}}> Save </a> *
+  <a {{action "save"}}> Save * </a>
   {{/if}}
 </span>
 {{humon-editor json=startedAt rootKey="Started at" downPressed="downPressed" upPressed="upPressed"}}
