data point view gains 'active' class when child content-fields are focusedIn: add actions to HEC, data_point_controller; clean up router

--- a/app/assets/stylesheets/data_point.css.scss
+++ b/app/assets/stylesheets/data_point.css.scss
@@ -20,7 +20,7 @@ $dataPointWidth: 500px;
     display: block;
     z-index: 100;
   }
-  &:focus span.options {
+  &.active span.options {
     position: relative;
     display: block;
     z-index: 100;
