Add boiler plate for rtdp ui; extract rtdp template out of rtdps template

--- a/app/assets/javascripts/templates/rescue_time_dps.hbs
+++ b/app/assets/javascripts/templates/rescue_time_dps.hbs
@@ -1,12 +1,3 @@
 {{#each rtdp in content}}
-<div>
-  {{rtdp.time}}
-  {{#each activity in rtdp.displayActivities}}
-  <div>
-    {{activity.name}}
-    {{activity.duration}}
-  </div>
-  {{/each}}
-
-</div>
+  {{render 'rescueTimeDp' rtdp}}
 {{/each}}
