bug fix + styling

--- a/app/assets/javascripts/templates/rescue_time_dp.hbs
+++ b/app/assets/javascripts/templates/rescue_time_dp.hbs
@@ -4,7 +4,7 @@
     -{{displayTimeRange}}
   </span>
   <span class="rtdp-time-hint relative">
-    {{displayTimeRelative}}
+    ({{displayTimeRelative}})
   </span>
 </span>
 <span {{bind-attr style=view.fillStyle}} class="rtdp-productivity">
