--- a/app/assets/stylesheets/rescue_time_dp.css.scss
+++ b/app/assets/stylesheets/rescue_time_dp.css.scss
@@ -63,6 +63,7 @@ $rtdpWidth: 700px;
     display: inline;
   }
   .relative {
-    font-style: italic
+    font-style: italic;
+    margin-left: 5px;
   }
 }
