--- a/app/assets/javascripts/templates/rescue_time_dp.hbs
+++ b/app/assets/javascripts/templates/rescue_time_dp.hbs
@@ -14,9 +14,5 @@
   Total time index: {{totalDuration}}
 </span>
 <br>
-{{#each activity in rtdp.displayActivities}}
-<div>
-  <span class="rtdp-activity">{{activity.name}}</span>
-  : {{activity.duration}}
-</div>
-{{/each}}
+
+{{render 'rtdpActivities' rtdp.displayActivities}}
