adding color to RTDP UI

--- a/app/assets/javascripts/templates/rescue_time_dp.hbs
+++ b/app/assets/javascripts/templates/rescue_time_dp.hbs
@@ -1,7 +1,5 @@
 <span class="rtdp-time">
-  {{timeString}}
-  <span class="rtdp-time-hint">
-    -{{timeRangeString}}
+  {{timeString}}<span class="rtdp-time-hint">&ndash;{{timeRangeString}}
   </span>
   <span class="rtdp-time-hint relative">
     ({{relativeTimeString}})
