--- a/app/assets/javascripts/templates/sp_day.hbs
+++ b/app/assets/javascripts/templates/sp_day.hbs
@@ -1,7 +1,7 @@
 <div class="well">
   {{#link-to "spDay" this}} Perma link {{/link-to}}
-{{date}} <br>
-{{note}}
+date: {{date}} <br>
+note: {{note}} <br>
 <br>
 {{humon-editor json=sleep rootKey="sleep"}}
 </div>
