Ember: add sp_day relations for yesterday and tomorrow; update sp_day.hbs to have today / tomorrow links

--- a/app/assets/javascripts/templates/sp_day.hbs
+++ b/app/assets/javascripts/templates/sp_day.hbs
@@ -1,5 +1,7 @@
 <div class="well">
   {{#link-to "spDay" this}} Perma link {{/link-to}}
+  {{#link-to "spDay" tomorrow}} Tomorrow {{/link-to}}
+  {{#link-to "spDay" yesterday}} Yesterday {{/link-to}}
 date: {{date}} <br>
 note: {{note}} <br>
 <br>
