--- a/app/assets/javascripts/templates/sp_day.hbs
+++ b/app/assets/javascripts/templates/sp_day.hbs
@@ -1,9 +1,9 @@
-<div class="well">
-  {{#link-to "spDay" this}} Perma link {{/link-to}}
-  {{#link-to "spDay" tomorrow}} Tomorrow {{/link-to}}
-  {{#link-to "spDay" yesterday}} Yesterday {{/link-to}}
+<div class="sp-day-header">
+  <span class="sp-day-yesterday"> {{#link-to "spDay" yesterday}} Yesterday {{/link-to}} </span>
+  <span class="sp-day-title"> {{#link-to "spDay" this}} {{title}} {{/link-to}} </span>
+  <span class="sp-day-tomorrow"> {{#link-to "spDay" tomorrow}} Tomorrow {{/link-to}}</span>
+</div>
 date: {{date}} <br>
 note: {{note}} <br>
 <br>
 {{humon-editor json=sleep rootKey="sleep"}}
-</div>
