add startedAt computed properties for SpDay, SpDayController, sp_day.hbs

--- a/app/assets/javascripts/templates/sp_day.hbs
+++ b/app/assets/javascripts/templates/sp_day.hbs
@@ -3,6 +3,7 @@
   <span class="sp-day-title"> {{#link-to "spDay" this}} {{title}} {{/link-to}} </span>
   <span class="sp-day-tomorrow"> {{#link-to "spDay" tomorrow}} Tomorrow {{/link-to}}</span>
 </div>
+Day started: {{startedAt}} <br>
 date: {{date}} <br>
 note: {{note}} <br>
 <br>
