Correct error in application.css.scss (remove @import sp_day). Add lots of documentation and remove lots of console.log. **No functionality changes**

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,7 @@
 @import "humon_node";
 @import "data_point";
 @import "rescue_time_dp";
-@import "sp_day";
+// @import "sp_day";
 
 .caption {
   font-weight: bold;
