Attempting to get HEC to display from new Humon.Node content. Add children computed property to Humon.List. Update humon_node.hbs to read from children property. Switch HEC.initContentFromJson to use Humon.j2n. Override HumonTypes.contextualize. Update HumonTypes#date.templateStrings

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -3,7 +3,7 @@ humon_node.hbs
 }}
 
 {{#if view.nodeContent.isCollection}}
-  {{#each nodeChild in view.nodeContent.nodeVal}}
+  {{#each nodeChild in view.nodeContent.nodeVal.children}}
     {{#with nodeChild}}
     {{view Sysys.HumonNodeView nodeContentBinding="nodeChild"}}
     {{/with}}
