--- a/app/assets/javascripts/templates/humon_complex.hbs
+++ b/app/assets/javascripts/templates/humon_complex.hbs
@@ -4,7 +4,7 @@ humon_node.hbs
 
 {{#each attributePair in view.nodeContent.attributes}}
   {{attributePair.key}}: {{view Sysys.HumonNodeView nodeContentBinding="attributePair.val"}}
-{{#each}}
+{{/each}}
 {{#each nodeChild in view.nodeContent.nodeVal.children}}
   {{#with nodeChild}}
   {{view Sysys.HumonNodeView nodeContentBinding="nodeChild"}}
