Add test humon sleep complex template to data point view'

--- a/app/assets/javascripts/templates/humon_node_literal.hbs
+++ b/app/assets/javascripts/templates/humon_node_literal.hbs
@@ -6,5 +6,5 @@ humon_node_literal.hbs
   <span class="node-detail"></span>
 
   <span class="node-detail node-icon">
-    {{partial humon_icon}}
+    {{partial humon_icon}} {{view.nodeContent.nodeType}}
   </span>
