Add TemplateContext for Humon.Complex, Humon.Sleep. Fix bug in data_point.hbs (meta key to metaTemplate for the last humon-editor component)

--- a/app/assets/javascripts/templates/data_point.hbs
+++ b/app/assets/javascripts/templates/data_point.hbs
@@ -8,4 +8,4 @@
 {{humon-editor json=endedAt rootKey="Ended at" downPressed="downPressed" upPressed="upPressed" focusLost="deactivateDataPointView" focusGained="activateDataPointView"}}
 {{humon-editor json=details rootKey="Details" downPressed="downPressed" upPressed="upPressed" focusLost="deactivateDataPointView" focusGained="activateDataPointView"}}
 
-{{humon-editor json=view.details rootKey="SleepComplex" meta=view.metaTemplate downPressed="downPressed" upPressed="upPressed" focusLost="deactivateDataPointView" focusGained="activateDataPointView"}}
+{{humon-editor json=view.details rootKey="SleepComplex" metaTemplate=view.metaTemplate downPressed="downPressed" upPressed="upPressed" focusLost="deactivateDataPointView" focusGained="activateDataPointView"}}
