--- a/app/assets/javascripts/templates/humon_complex.hbs
+++ b/app/assets/javascripts/templates/humon_complex.hbs
@@ -1,12 +1,12 @@
 {{!
-humon_node.hbs
+humon_node_complex.hbs
 }}
 
 {{#each attributePair in view.nodeContent.attributes}}
   {{attributePair.key}}: {{view Sysys.HumonNodeView nodeContentBinding="attributePair.val"}}
-{{#each}}
+{{/each}}
 {{#each nodeChild in view.nodeContent.nodeVal.children}}
   {{#with nodeChild}}
-  {{view Sysys.HumonNodeView nodeContentBinding="nodeChild"}}
+    {{view Sysys.HumonNodeView nodeContentBinding="nodeChild"}}
   {{/with}}
 {{/each}}
