--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,3 @@
-/*
- *= require source-sans-pro
- */
 @import "bootstrap";
 @import "jquery.ui.datepicker";
 @import "jquery.ui.slider";
@@ -10,8 +7,7 @@
 @import "humon_node";
 @import "data_point";
 @import "rescue_time_dp";
-// @import "sp_day";
-
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,600,700);
 .caption {
   font-weight: bold;
 }
