--- a/app/assets/stylesheets/humon/debug.css.scss
+++ b/app/assets/stylesheets/humon/debug.css.scss
@@ -2,11 +2,12 @@
   visibility: visible;
 }
 
-span.node-debug {
+.node-debug {
   visibility: hidden;
   position: relative;
   display: inline-block;
-  position: absolute;
+  position: fixed;
   right: 5px;
+  bottom: 5px;
   font-size: 10px;
 }
