Add caching for data points

--- a/app/assets/javascripts/templates/_humon_node_debug.hbs
+++ b/app/assets/javascripts/templates/_humon_node_debug.hbs
@@ -2,8 +2,11 @@
 
 <span class="node-debug">
   <dl>
-    <dt>view.templateName </dt> <dd>{{view.templateName}}</dd>
-    <dt>view.Content.nodeType </dt> <dd>{{view.nodeContent.nodeType}}</dd>
-    <dt> view.id </dt> <dd>{{view._id}}</dd>
+    <dt>  view.templateName </dt>
+    <dd>{{view.templateName}}</dd>
+    <dt>  view.nodeContent.nodeType </dt>
+    <dd>{{view.nodeContent.nodeType}}</dd>
+    <dt>  view.id </dt>
+    <dd>{{view._id}}</dd>
   </dl>
 </span>
