Cleaning up debug

--- a/app/assets/stylesheets/humon/detail.css.scss
+++ b/app/assets/stylesheets/humon/detail.css.scss
@@ -24,3 +24,8 @@ span.node-detail.node-icon {
     left: 0px ;// -12px;
   }
 }
+
+.node-detail.class-name {
+  color: $grayLighter;
+  float: right;
+}
