--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -43,7 +43,7 @@
   left: 0;
   font-size: 22px;
   font-weight: 700;
-  vertical-align: middle;
+  // vertical-align: middle;
 }
 
 .node.active > .node {
