--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -1,15 +1,17 @@
+<div class="container">
+
+
 <h1> JSON Admin </h1>
-<div class="navbar">
-<div class="navbar-inner">
-<ul class="nav">
+<ul class="nav nav-pills">
+  <li class="active"> {{#linkTo acts}} Dashboard {{/linkTo}}</li>
   <li> {{#linkTo acts.new}} Track {{/linkTo}}</li>
   <li> {{#linkTo acts}} Recent {{/linkTo}}</li>
 </ul>
-</div>
-</div>
 
 
-{{!view Sysys.TestView}}
-<div class="span8 center">
-{{outlet}}
+  <div class="row">
+    <div class="col-xs-8">
+      {{outlet}}
+    </div>
+  </div>
 </div>
