--- a/app/assets/stylesheets/data_point.css.scss
+++ b/app/assets/stylesheets/data_point.css.scss
@@ -1,12 +1,12 @@
-$dataPointWidth: 700px;
+// $dataPointWidth: 700px;
 
 .data-point {
   position: relative;
-  width: $dataPointWidth;
-  border: 1px solid $grayLightest1;
-  border-radius: 3px;
-  padding: 3px;
-  margin: 3px;
+  // width: $dataPointWidth;
+  // border: 1px solid $grayLightest1;
+  // border-radius: 3px;
+  // padding: 3px;
+  // margin: 3px;
 
   span.options {
     position: relative;
