--- a/app/assets/stylesheets/rescue_time_dp.css.scss
+++ b/app/assets/stylesheets/rescue_time_dp.css.scss
@@ -1,8 +1,8 @@
-$rtdpWidth: 700px;
+// $rtdpWidth: 700px;
 
 .rtdp {
   position: relative;
-  width: $dataPointWidth;
+  // width: $dataPointWidth;
   border: 1px solid $grayLightest1;
   border-radius: 3px;
   padding: 3px;
