--- a/app/assets/javascripts/templates/_fixed_key_field.hbs
+++ b/app/assets/javascripts/templates/_fixed_key_field.hbs
@@ -1,1 +1,1 @@
-{{view "Sysys.KeyFixedField" rawValueBinding=view.nodeContent.nodeKey}}<span class="colon-glyph">:</span>
+{{view "Sysys.KeyFixedField" rawValueBinding=view.nodeContent.nodeKey}}
