Pull out nav into its own template file; restyle nav logo; fix humon detail icons

--- a/app/assets/stylesheets/humon/content_field.css.scss
+++ b/app/assets/stylesheets/humon/content_field.css.scss
@@ -54,10 +54,10 @@
     border-bottom: $borderTransparent;
     font-weight: 600;
   }
-  .node.active > span.content-field.key-field.key-field-fixed {
-    color: $rootNodeKeyColor;
-    border-bottom: $borderTransparent;
-  }
+}
+.node.active > span.content-field.key-field.key-field-fixed {
+  color: $rootNodeKeyColor;
+  border-bottom: $borderLightUnderline;
 }
 
 .node.active > .content-field {
